2018-12-14  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXMFDOTDIR): new variable, used instead of
	literal "." in all search paths, so that it can be redefined as
	".//". Suggestion from Linas Stonys, tex-k 4 Dec 2018 10:09:35.

2018-12-12  Karl Berry  <karl@freefriends.org>

	* c-pathch.h (IS_KPSE_SEP): new macro to check for either : or ;
	regardless of the current system.
	* path-elt.c (element): use it when extracting the path elements,
	so that we'll get ~ expansion on Unix in, e.g.,
	    env FOO='/;~' ./kpsewhich --expand-braces='$FOO'
	* kpsewhich.c (main): call kpathsea_brace_expand on the result
	from kpathsea_var_value, so that we'll get ~ expansion in, e.g.,
	    env FOO='/:~' ./kpsewhich --var-value=FOO
	Original report from e-kwsm (E Kawashima),
	https://github.com/TeX-Live/texlive-source/issues/3
	
	* NEWS,
	* doc/kpathsea.texi (Auxiliary tasks): document that -var-value
	now does brace expansion.

2018-12-12  Karl Berry  <karl@freefriends.org>

	* expand.h,
	* pathsearch.h,
	* cnf.c: doc fixes.
	
	* kpsewhich.c (main): show path when --show-path can't run.

2018-12-11  Karl Berry  <karl@freefriends.org>

	* kpsewhich.c (main): formatting.

2018-12-04  Karl Berry  <karl@freefriends.org>

	* kpsewhich.c (main) [WIN32]: #define puts kpathsea_win32_puts
	once, instead of many #ifdefs throughout function.

2018-11-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* elt-dirs.c, knj.c, progname.c: Support non-ascii values
	for variables in the case of
	command_line_encoding = utf-8 (w32 only).

2018-11-12  Andreas Scherer  <https://ascherer.github.io>

	* tex-make.c (maketex): check return value from dup(2).

2018-07-02  Karl Berry  <karl@freefriends.org>

	* kpsewhich.c (lookup): warn that --all is ignored with bitmap fonts.
	(USAGE): likewise.
	* doc/kpathsea.texi (Path searching options) <--all>: likewise.
	Report from Werner Lember, 07 Apr 2018 12:39:34.

2018-06-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
