@@ -1,10 +1,14 @@
 2018-12-14  Karl Berry  <karl@tug.org>
 
+	* c-pathch.h (IS_KPSE_SEP): check for both : and ; only on Unix.
+	On Windows, : is the c: drive separator and must not ever be
+	a path separator.
+
 	* texmf.cnf (TEXMFDOTDIR): new variable, used instead of
 	literal "." in all search paths, so that it can be redefined as
 	".//". Suggestion from Linas Stonys, tex-k 4 Dec 2018 10:09:35.
 
-2018-12-12  Karl Berry  <karl@freefriends.org>
+2018-12-13  Karl Berry  <karl@freefriends.org>
 
 	* c-pathch.h (IS_KPSE_SEP): new macro to check for either : or ;
 	regardless of the current system.
